data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3285.wast
;; 4. **Test 4: Call Before Function Definition**    - Define a scenario where a function is called before it is defined within the module.    - **Specific Constraint**: Validates the function index resolution when definitions are yet to be parsed, ensuring proper referencing.    - **Test Relation**: Tests if the stack correctly handles an invalid function reference and possibly reaches an 'unreachable' instruction.

(assert_invalid
  (module
    (func (call 1))
    (func (result i32) (i32.const 42))
  )
  "unknown function"
)